# A-B_Version_B93CA538-82E4-44C6-9388-D759224F9A21

./: .gitignore  A_Version.md  B_Version.md  CMakeLists.txt  README.md
A_Version/src/: main.cpp
A_Version/src/core/: AES.cpp  AES.h  ClipboardMonitor.cpp  DatabaseManager.cpp  DatabaseManager.h  FileCryptoHelper.cpp  FileCryptoHelper.h  HotkeyManager.cpp  IPlatformSystem.h  KeyboardHook.cpp  KeyboardHook.h  OCRManager.cpp  OCRManager.h  ServiceLocator.h  ShortcutManager.cpp  ShortcutManager.h  Win32System.h
A_Version/src/models/: CategoryModel.cpp  CategoryModel.h  NoteModel.cpp  NoteModel.h
A_Version/src/ui/: AdvancedTagSelector.cpp  AdvancedTagSelector.h  CategoryDelegate.h  CategoryLockWidget.cpp  CleanListView.cpp  (+70 more)
B_Version/: CMakeLists.txt
B_Version/src/: main.cpp
B_Version/src/ui/: FileSearchWindow.cpp  FloatingBall.cpp  StringUtils.h  SystemTray.cpp  Toolbox.cpp  Toolbox.h
B_Version/src/utils/: StringUtils.h
B_Version/src/windows/: FileSearchWindow.cpp  FileSearchWindow.h  FramelessDialog.cpp  FramelessDialog.h  KeywordSearchWindow.cpp  KeywordSearchWindow.h  SearchAppWindow.cpp  SystemTray.cpp
resources/: resources.qrc
resources/qss/: dark_style.qss
src/: main.cpp
src/ui/: FileSearchWindow.cpp  FloatingBall.cpp  StringUtils.h  SvgIcons.h  SystemTray.cpp  Toolbox.cpp  Toolbox.h
src/utils/: IconHelper.h  StringUtils.h  SvgIcons.h
src/windows/: FileSearchWindow.cpp  FileSearchWindow.h  FramelessDialog.cpp  FramelessDialog.h  KeywordSearchWindow.cpp  KeywordSearchWindow.h  SearchAppWindow.cpp  SearchAppWindow.h  SystemTray.cpp  SystemTray.h
(+4 files in other folders)
